added new files

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,133 @@ build/
 
 ### Mac OS ###
 .DS_Store
+.ecommerce-project-v02/00-starter-files/product-image-assets/products/books/
+ecommerce-project-v02/00-starter-files/luv2shop-template/checkout-page.html
+ecommerce-project-v02/00-starter-files/luv2shop-template/favicon.ico
+ecommerce-project-v02/00-starter-files/luv2shop-template/home.html
+ecommerce-project-v02/00-starter-files/luv2shop-template/product-detail.html
+ecommerce-project-v02/00-starter-files/luv2shop-template/shopping-detail.html
+ecommerce-project-v02/00-starter-files/luv2shop-template/styles.css
+ecommerce-project-v02/00-starter-files/luv2shop-template/assets/images/logo.png
+ecommerce-project-v02/00-starter-files/luv2shop-template/assets/images/products/placeholder.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/placeholder.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1000.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1001.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1002.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1003.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1004.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1005.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1006.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1007.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1008.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1009.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1010.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1011.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1012.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1013.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1014.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1015.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1016.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1017.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1018.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1019.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1020.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1021.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1022.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1023.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/books/book-luv2code-1024.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1000.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1001.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1002.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1003.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1004.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1005.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1006.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1007.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1008.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1009.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1010.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1011.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1012.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1013.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1014.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1015.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1016.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1017.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1018.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1019.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1020.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1021.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1022.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1023.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/coffeemugs/coffeemug-luv2code-1024.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1000.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1001.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1002.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1003.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1004.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1005.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1006.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1007.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1008.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1009.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1010.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1011.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1012.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1013.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1014.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1015.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1016.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1017.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1018.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1019.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1020.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1021.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1022.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1023.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/luggagetags/luggagetag-luv2code-1024.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1000.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1001.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1002.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1003.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1004.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1005.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1006.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1007.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1008.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1009.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1010.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1011.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1012.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1013.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1014.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1015.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1016.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1017.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1018.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1019.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1020.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1021.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1022.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1023.png
+ecommerce-project-v02/00-starter-files/product-image-assets/products/mousepads/mousepad-luv2code-1024.png
+GenericsDemo/.idea/misc.xml
+GenericsDemo/.idea/modules.xml
+GenericsDemo/out/production/GenericsDemo/Animal.class
+GenericsDemo/out/production/GenericsDemo/Dog.class
+GenericsDemo/out/production/GenericsDemo/GenericsDemo.class
+GenericsDemo/out/production/GenericsDemo/Printer.class
+Quarkus/demo-project/.dockerignore
+Quarkus/demo-project/.gitignore
+Quarkus/demo-project/mvnw
+Quarkus/demo-project/mvnw.cmd
+Quarkus/demo-project/pom.xml
+Quarkus/demo-project/README.md
+Quarkus/demo-project/.mvn/wrapper/.gitignore
+Quarkus/demo-project/.mvn/wrapper/maven-wrapper.properties
+Quarkus/demo-project/.mvn/wrapper/MavenWrapperDownloader.java
+Quarkus/demo-project/src/main/docker/Dockerfile.jvm
+Quarkus/demo-project/src/main/docker/Dockerfile.legacy-jar
+Quarkus/demo-project/src/main/docker/Dockerfile.native
+Quarkus/demo-project/src/main/docker/Dockerfile.native-micro
+Quarkus/demo-project/src/main/resources/application.properties
